integration test integrated java based